--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,7 +18,7 @@
     </div>
 
 
-  <button mat-button color="primary">Upload Photo</button>
+  <button mat-button color="primary" (click)="openDialog()">Upload Photo</button>
 </header>
 <div class="grid grid-cols-8 gap-4">
   <div class="bg-blue-500 h-44 w-44" *ngFor="let box of boxes"></div>
