--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<main class="flex flex-col items-center my-10 mx-20">
+<main class="flex flex-col items-center py-10 px-20 bg-orange-200">
   <router-outlet></router-outlet>
 </main>
