--- a/src/app/image-form-dialog/image-form-dialog.component.html
+++ b/src/app/image-form-dialog/image-form-dialog.component.html
@@ -1,12 +1,53 @@
-<h1 mat-dialog-title>Hi {{data.name}}</h1>
-<div mat-dialog-content>
-  <p>What's your favorite animal?</p>
-  <mat-form-field>
-    <mat-label>Favorite Animal</mat-label>
-    <input matInput [(ngModel)]="data.animal">
-  </mat-form-field>
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
-</div>
+<main class="p-10">
+  <h1 mat-dialog-title>Upload new Photo</h1>
+  <div mat-dialog-content>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <div class="form-fields">
+        <mat-form-field class="w-full">
+          <mat-label> Title </mat-label>
+          <input
+            matInput
+            type="text"
+            placeholder="Title"
+            formControlName="title"
+          />
+        </mat-form-field>
+  
+        <mat-form-field class="w-full">
+          <mat-label> Description </mat-label>
+          <textarea matInput rows="5" formControlName="description"></textarea>
+        </mat-form-field>
+  
+        <mat-form-field class="w-full">
+          <mat-label> Labels </mat-label>
+          <input
+          matInput
+          type="text"
+          placeholder="Add a new label"
+          formControlName="labels"
+        />
+        </mat-form-field>
+  
+  
+        <div class="field hour">
+          <label> Image </label>
+          <div class="uploader flex justify-center py-8">
+            <app-file-uploader
+              class="uploader border w-[25%] h-[200px]"
+              #fileUploader
+              [defaultValues]="fileUploaderOptions"
+              (image)="image = $event"
+            ></app-file-uploader>
+          </div>
+        </div>
+  
+        <div class="flex gap-6 mt-6 justify-end">
+          <button mat-button color="primary" [mat-dialog-close]="data.animal" cdkFocusInitial>Confirm </button>
+          <button mat-button (click)="onNoClick()">Cancel</button>
+        </div>
+      </div>
+    </form>
+  </div>
+</main>
+
+
