adding and getting images

--- a/src/app/image-form-dialog/image-form-dialog.component.html
+++ b/src/app/image-form-dialog/image-form-dialog.component.html
@@ -42,7 +42,7 @@
         </div>
   
         <div class="flex gap-6 mt-6 justify-end">
-          <button mat-button color="primary" [mat-dialog-close]="data.animal" cdkFocusInitial>Confirm </button>
+          <button type="submit" mat-button color="primary" [mat-dialog-close]="data.animal" cdkFocusInitial>Confirm </button>
           <button mat-button (click)="onNoClick()">Cancel</button>
         </div>
       </div>
