--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,3 +10,12 @@ h4{
     font-size: 1.5em;
     font-weight: 300;
 }
+
+.background-image{
+    background-size: cover;
+    background-position: center;
+    /* height: 100%; */
+    height: 200px;
+    width: 200px;
+    /* width: 100%; */
+}
