--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,31 +1,32 @@
 <header class="flex justify-between items-center py-6">
-    <div class="left-side flex items-center basis-2/5 gap-10">
-        <div class="logo flex flex-col basis-2/5">
-            <h1 class="text-green-500">My Photo</h1>
-            <h4 class="text-green-800">History</h4>
-          </div>
-        
-        <mat-form-field class="w-full self-end">
-            <mat-label>Search an image</mat-label>
-            <input
-              matInput
-              type="text"
-              placeholder="Search by title, label..."
-              [(ngModel)]="inputValue"
-              (input)="onInputChange()"
-            />
-          </mat-form-field>
+  <div class="left-side flex items-center basis-2/5 gap-10">
+    <div class="logo flex flex-col basis-2/5">
+      <h1 class="text-green-500">My Photo</h1>
+      <h4 class="text-green-800">History</h4>
     </div>
 
+    <mat-form-field class="w-full self-end">
+      <mat-label>Search an image</mat-label>
+      <input
+        matInput
+        type="text"
+        placeholder="Search by title, label..."
+        [(ngModel)]="inputValue"
+        (input)="onInputChange()"
+      />
+    </mat-form-field>
+  </div>
 
-  <button mat-button color="primary" (click)="openDialog()">Upload Photo</button>
+  <button mat-button color="primary" (click)="openDialog()">
+    Upload Photo
+  </button>
 </header>
-<div class="grid grid-cols-8 gap-4">
-  <app-image-card [imgSrc]="box.image_src" *ngFor="let box of boxes"></app-image-card>
-  <!-- <div class="" *ngFor="let box of boxes"> -->
-    <!-- <div  class="background-image" *ngIf="box?.image_src" [style.background-image]="'url(' + box.image_src + ')'"> -->
-
-  <!-- </div> -->
+<div class="grid grid-cols-[repeat(6,_minmax(200px,_1fr))] gap-8">
+  <div *ngFor="let box of boxes">
+    <app-image-card
+      [imgSrc]="box.image_src"
+    ></app-image-card>
+  </div>
 </div>
 <!-- <div class="grid grid-cols-10 gap-4">
     <di
