--- a/src/app/image-form-dialog/image-form-dialog.component.html
+++ b/src/app/image-form-dialog/image-form-dialog.component.html
@@ -15,7 +15,7 @@
   
         <mat-form-field class="w-full">
           <mat-label> Description </mat-label>
-          <textarea matInput rows="5" formControlName="description"></textarea>
+          <textarea class="tw-input" matInput rows="5" formControlName="description"></textarea>
         </mat-form-field>
   
         <mat-form-field class="w-full">
